[package]
name = "healthdog"
version = "0.1.0"
authors = ["Petros Angelatos <petrosagg@gmail.com>"]
description = "Helper program that connects external periodic heathchecks with systemd's watchdog support"
repository = "https://github.com/resin-os/healthdog-rs.git"
license = "Apache-2.0"

[dependencies]
libc = "0.2"
systemd = "0.*"
getopts = "0.2.4"
exec = "0.3.1"
nix = "0.8.0"

[profile.release]
lto = true
