[package]
name = "healthdog"
version = "1.0.3"
authors = ["Petros Angelatos <petrosagg@gmail.com>"]
description = "Helper program that connects external periodic heathchecks with systemd's watchdog support"
repository = "https://github.com/resin-os/healthdog-rs.git"
license = "Apache-2.0"

[dependencies]
libc = "0.2"
systemd = "0.4"
getopts = "0.2"
exec = "0.3"
nix = "0.15"

